# MIA_HW

./: .gitignore  HomeWork(11.10.2024).cpp  README.md  gladkie.cpp  locator.cpp
Algorithms/FirstLab/: build.bat  Диаграмма1.drawio  Отчёт1.docx
Algorithms/FirstLab/projects/Project/: CMakeLists.txt  main.cpp
Algorithms/FirstLab/projects/Project/names/: CMakeLists.txt  generator.cpp  generator.hpp  men_Fam.txt  men_Names.txt  men_fNames.txt
Algorithms/FirstLab/projects/Project/trains/: CMakeLists.txt  train.cpp  train.hpp  trains.csv
Algorithms/FirstLabTwo/: 1 лабораторная - 2 сем - 2025-2026 гг..docx  1.drawio  algorithms.py  main.py  Отчет_ЛР1.docx
Algorithms/FourthLab/: FIO_Passport_Trip_List.csv  algo_qt_app.py  readme.md  spoiled_dataset1.csv  spoiled_dataset2.csv  stats_dataset.csv  stats_dataset_report.txt  ~$Отчёт4.docx  Новый текстовый документ.txt  Отчёт4.docx
Algorithms/FoutrhLabTwo/: algorithms.py  (+5 more)
Compiler/: build.bat  run_test.bat
IoT/: emergency_system.py  requirements.txt
NotAHW/: Shifrator.py  do_merge_sort.cpp  do_merge_sort.hpp  io.cpp  io.hpp  main.cpp  run.bat
Obuchaika/: main.cpp  menu_functions.cpp  menu_functions.hpp  run.bat
Vinger/: menu.hpp
after_ref/: HomeWork(11.10.2024).ii  HomeWork(11.10.2024).s  after_ref.cpp  run.bat
gladkie/: gladkie.cpp
locator/: locator.cpp
merge_sort/: do_merge.cpp  do_merge.hpp  do_merge_sort.cpp  do_merge_sort.hpp  generate_arrange.cpp  generate_arrange.hpp  main.cpp  make_random.cpp  make_random.hpp  print.cpp  print.hpp  print_arrange.cpp  print_arrange.hpp  run.bat
projects/: build.bat
(+156 files in other folders)
